# cargo build --release --target=x86_64-unknown-linux-musl
# cargo test -- --nocapture utils::unix_crypt::tests::test_rand_password
[package]
name = "apigw"
version = "0.9.11"
authors = ["kiven <kivensoft@gmail.com>"]
edition = "2024"
description = "intelligent community api gateway"
repository = "https://github.com/kivensoft/apigw"
build = "build.rs"

[profile.dev]
debug = false

[profile.release]
# 优化级别：'z' 专注于减小体积，'s' 次之，3 专注于性能
opt-level = "z"
# 启用链接时优化 (LTO)，允许跨模块内联与死代码消除
# 可选值：true (fat), 'thin', 'off', 'fat'
lto = "fat"
# 自动剥离调试符号 (Cargo 1.59+)
strip = true
# 减少代码生成单元，增加优化视野，但会显著增加编译时间
codegen-units = 1
# 修改 Panic 策略为 abort，移除栈展开信息
panic = "abort"
# 溢出检查：在生产环境可考虑关闭，但需谨慎评估安全性
overflow-checks = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
mimalloc = { version = "0.1", optional = true } # 替代系统内存分配器
# 最流行的异步io库
tokio = { version = "1", features = [
    "fs", "macros", "net", "parking_lot", "rt", "rt-multi-thread",
    "signal", "sync", "time"
]}
tokio-utils = "0.1" # tokio扩展工具类
# futures = "0.3" # 异步编程的官方库
# futures-util = "0.3" # 异步扩展库
# async-trait = "0.1" # trait的异步函数声明库
hyper = { version = "1", features = ["http1", "client"] } # 最流行的底层http协议库
hyper-util = { version = "0.1", features = [ "client", "client-legacy", "http1", "tokio" ] } #hyper 扩展库
http-body = "1" # http body 扩展库
http-body-util = "0.1" # http body 扩展库

axum = "0.8" # tokio 官方出品的web框架
tower = "0.5" # 配合 axum 使用的中间件库
tower-http = { version = "0.6", features = ["cors", "trace"] } # http 中间件库
time = { version = "0.3", features = ["macros"] } # 日期时间库

tracing = "0.1" # 结构化日志库
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "local-time"] }
tracing-appender = "0.2"
tracing-log = "0.2"

serde = { version = "1", features = ["derive", "rc"] } # 最流行的序列化反序列化库
serde_json = "1" # 最流行的json序列化反序列化库
serde_repr = "0.1" # 将 enum 进行数值化的序列化和反序列化

# redis-async = "0.18" # 一个简单的异步redis库
# url = "2" # 解析url的库

# form_urlencoded = "1" # url参数编解码库
# urlencoding = "2" # url编解码库
# cookie = { version = "0.18", features = ["percent-encode"] } # http cookie库
anyhow = "1" # 最流行的错误处理库
base64 = "0.22" # base64 编解码库
bytes = "1" # 高效字节处理库
# bumpalo = {version = "3", features = ["collections", "serde", "boxed"]} # 快速 arena 内存分配库
# time = { version = "0.3", features = ["formatting", "parsing", "macros", "serde"] } # 官方推荐的日期时间库
compact_str = { version = "0.9", features = ["serde", "bytes"] } # 小字符串内嵌的字符串替代库
# triomphe = "0.1" # 比标准库的Arc更轻量的替代类(功能更多，对C++更友好)
# arc-swap = "1" # 类似Mutex<Arc<T>>的类，但更高效
dashmap = "6" # 高性能线程安全map
fast_radix_trie = "1" # 一个快速字典树
fnv = "1" # 速度更快的HashMap, 适用于小数据量
governor = "0.10" # 经典令牌桶算法库
indexmap = {version = "2", features = ["serde"]} # 类似java的LinkedHashMap
itoa = "1" # 快速整数转字符串库
memchr = "2" # 快速查找字符串中某个字符的索引
mini-moka = "0.10" # 轻量级缓存库，rust版本的Caffeine实现
parking_lot = "0.12" # 性能更好的替代标准库Mutex/RwLock的三方库
prost = "0.14" # protobuf 序列化反序列化库
rand = "0.10" # 最广泛使用的随机数生成库
redb = "4" # 嵌入式kv数据库
rclite = "0.3" # 比Arc更轻量的替代库
# slab = "0.4" # arena 内存分配器
smallstr = { version = "0.3", features = ["serde"] } # 基于栈的字符串
smallvec = { version = "1", features = ["write"] } # 基于栈的动态数组
strum = { version = "0.28", features = ["derive"] }
# unicode-segmentation = "1" # unicode 字符库, 包含对 emoji 字符的支持
# zerompk = "0.4" # 极致速度的序列化库

ansicolor = "1" # 支持终端ansi颜色的库
appcfg = { version = "1", features = ["chinese"] } # 支持命令行参数解析和配置文件参数解析的库
localtime = { git = "https://gitee.com/kivensoft/localtime_rs.git" } # 本地时间序列化反序列化库
kjwt = { git = "https://gitee.com/kivensoft/jwt_rs.git" } # jwt库
kv_axum_util = { path = "kv_axum_util" } # axum 框架的扩展库
kv_redis = { path = "kv_redis" } # redis 扩展库


# 只在 musl 目标下启用 mimalloc
[target.'cfg(all(target_os="linux", target_env="musl"))'.dependencies]
mimalloc = "0.1"
