[package]
name = "asynclog"
version = "1.0.0"
edition = "2021"
authors = ["kiven <kivensoft@gmail.com>"]
description = "A simple, asynchronous log library"

[features]
default = ["time"]

[dependencies]
log = "0.4"
parking_lot = "0.12"
time = { version = "0.3", optional = true, features = ["formatting", "local-offset"] }
chrono = { version = "0.4", optional = true, features = ["serde"] }
