[package]
name = "jwt"
version = "1.0.0"
edition = "2021"
authors = ["kiven <kivensoft@gmail.com>"]
description = "JSON Web Token library"

[features]
default = []

[dependencies]
sha2 = "0.10"
hmac = "0.12"
rsa = { version = "0.8", optional = true, features = ["sha2"] }
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
