[package]
name = "kv_axum_util"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["kiven <kivensoft@gmail.com>"]
description = "tracing log extension library"

[dependencies]
tokio = { version = "1", features = [ "sync" ]}
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }

serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "local-time"] }
tracing-appender = "0.2"
tracing-log = "0.2"

anyhow = "1"
bytes = "1"
compact_str = { version = "0.9", features = ["serde", "bytes"] }
futures = "0.3"
itoa = "1"
memchr = "2"
rclite = "0.4"
smallstr = { version = "0.3" }
smallvec = { version = "1", features = ["write"] }
time = { version = "0.3", features = ["macros"] }

kv_axum_proc_macro = { path = "kv_axum_proc_macro" }
kv_axum_route = { path = "kv_axum_route" }
