[package]
name = "localtime"
version = "1.0.0"
edition = "2021"
authors = ["kiven <kivensoft@gmail.com>"]
description = "localtime serialize and deserialize"

[features]
default = ["time"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", optional = true, features = ["serde"] }
time = { version = "0.3", optional = true, features = ["formatting", "parsing", "macros", "serde", "local-offset"] }
mysql_common = { version = "0.29", optional = true }
